fix: Add more spacing between floating button and dropdown panel

--- a/styles.css
+++ b/styles.css
@@ -98,7 +98,7 @@
 
 .xfp-floating-dropdown {
   position: absolute;
-  bottom: 70px;
+  bottom: 80px;
   right: 0;
   width: 320px;
   max-height: 400px;
